--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <title>Taller Eventos</title>
+  <style>
+    #contenedor {
+      padding: 5px;
+      background-color: green;
+    }
+  </style>
 </head>
 <body>
 
-  <button onclick="alert('Hola!')">Saludar</button>
+  <div id="contenedor">
+    <button onclick="alert('Hola!')">Saludar</button>
+  </div>
 
+  <script src="eventos.js"></script>
 </body>
 </html>
